--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -266,13 +266,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Cost Of Order:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IPT-XY-Fb3">
-                                                <rect key="frame" x="0.0" y="0.0" width="114.5" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="285.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="£00.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ch-Zg-sE4">
-                                                <rect key="frame" x="114.5" y="0.0" width="228.5" height="20.5"/>
+                                                <rect key="frame" x="285.5" y="0.0" width="57.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -283,13 +283,13 @@
                                         <rect key="frame" x="0.0" y="32.5" width="343" height="20.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Collection Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbR-xt-Llb">
-                                                <rect key="frame" x="0.0" y="0.0" width="127" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="296.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="00.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdE-8s-IZo">
-                                                <rect key="frame" x="127" y="0.0" width="216" height="20.5"/>
+                                                <rect key="frame" x="296.5" y="0.0" width="46.5" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -534,37 +534,42 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="84.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zj9-fR-baw" userLabel="Cell Content Left">
-                                            <rect key="frame" x="16" y="15" width="116.5" height="51"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Cappucchino" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3X-MA-kHp" userLabel="Item">
-                                                    <rect key="frame" x="0.0" y="0.0" width="116.5" height="24"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6m-QZ-vIl">
-                                                    <rect key="frame" x="0.0" y="32" width="116.5" height="19"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="£00.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nef-Mt-mlQ">
                                             <rect key="frame" x="301.5" y="29" width="57.5" height="27"/>
                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Zj9-fR-baw" userLabel="Cell Content Left">
+                                            <rect key="frame" x="16" y="15" width="116.5" height="53"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Cappucchino" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3X-MA-kHp" userLabel="Item">
+                                                    <rect key="frame" x="0.0" y="0.0" width="116.5" height="24.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6m-QZ-vIl">
+                                                    <rect key="frame" x="0.0" y="32.5" width="116.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="Nef-Mt-mlQ" firstAttribute="top" secondItem="S0E-Eg-aud" secondAttribute="topMargin" constant="18" id="FgU-hH-Lem"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Nef-Mt-mlQ" secondAttribute="bottom" constant="18" id="UNa-Zb-Kcg"/>
+                                        <constraint firstItem="Nef-Mt-mlQ" firstAttribute="trailing" secondItem="S0E-Eg-aud" secondAttribute="trailingMargin" id="3a2-fw-T2b"/>
+                                        <constraint firstItem="Zj9-fR-baw" firstAttribute="leading" secondItem="S0E-Eg-aud" secondAttribute="leadingMargin" id="GBj-Dz-H2C"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Zj9-fR-baw" secondAttribute="bottom" constant="6" id="T2c-D0-W5N"/>
                                         <constraint firstItem="Zj9-fR-baw" firstAttribute="top" secondItem="S0E-Eg-aud" secondAttribute="topMargin" constant="4" id="eWg-tx-Xwn"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Zj9-fR-baw" secondAttribute="bottom" constant="8" id="jYb-a3-7Gq"/>
+                                        <constraint firstItem="Zj9-fR-baw" firstAttribute="leading" secondItem="S0E-Eg-aud" secondAttribute="leadingMargin" id="gSe-5o-N3B"/>
+                                        <constraint firstItem="Zj9-fR-baw" firstAttribute="leading" secondItem="S0E-Eg-aud" secondAttribute="leadingMargin" id="kdU-Us-Wfg"/>
+                                        <constraint firstItem="Nef-Mt-mlQ" firstAttribute="trailing" secondItem="S0E-Eg-aud" secondAttribute="trailingMargin" id="kiG-Pg-0U3"/>
                                         <constraint firstItem="Nef-Mt-mlQ" firstAttribute="trailing" secondItem="S0E-Eg-aud" secondAttribute="trailingMargin" id="oAa-H9-j9M"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Nef-Mt-mlQ" secondAttribute="bottom" constant="18" id="s8q-Sa-BDq"/>
                                         <constraint firstItem="Zj9-fR-baw" firstAttribute="leading" secondItem="S0E-Eg-aud" secondAttribute="leadingMargin" id="utk-1E-4aJ"/>
+                                        <constraint firstItem="Nef-Mt-mlQ" firstAttribute="top" secondItem="S0E-Eg-aud" secondAttribute="topMargin" constant="18" id="zbW-WI-GLo"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
