--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -472,7 +472,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FLI-vK-WBU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1964" y="230"/>
+            <point key="canvasLocation" x="-1998" y="0.0"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -934,6 +934,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="Y8Z-er-Af1"/>
         <segue reference="ztF-bY-xiy"/>
-        <segue reference="B7J-i7-al0"/>
+        <segue reference="TPN-l1-BWD"/>
     </inferredMetricsTieBreakers>
 </document>
