Storyboard and colour implementation

--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -134,7 +134,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="49W-Nv-7Wb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1433" y="760"/>
+            <point key="canvasLocation" x="-489" y="2053"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="kv1-kc-ALb">
@@ -204,41 +204,61 @@
         <!--Select Account Type-->
         <scene sceneID="AJl-zb-hcd">
             <objects>
-                <viewController id="Nw9-Ox-Wry" userLabel="Select Account Type" sceneMemberID="viewController">
+                <viewController id="Nw9-Ox-Wry" userLabel="Select Account Type" customClass="SelectAccount" customModule="To_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SV9-nQ-5oT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ZVR-Zc-Wks">
-                                <rect key="frame" x="92" y="273.5" width="191" height="120.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2jh-wJ-hhm">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select your account type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v41-Zc-zeo">
-                                        <rect key="frame" x="0.0" y="0.0" width="191" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vt2-lh-Pag">
-                                        <rect key="frame" x="62" y="40.5" width="67" height="30"/>
-                                        <state key="normal" title="Customer"/>
-                                        <connections>
-                                            <segue destination="8NJ-Qu-0rA" kind="show" id="P7f-w3-ATX"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1G-JO-znc">
-                                        <rect key="frame" x="64.5" y="90.5" width="62" height="30"/>
-                                        <state key="normal" title="Business"/>
-                                        <connections>
-                                            <segue destination="Pl5-6d-prL" kind="show" id="hlX-HZ-rKM"/>
-                                        </connections>
-                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9eN-cD-mDt" userLabel="CustomerView">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="301.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vt2-lh-Pag">
+                                                <rect key="frame" x="154" y="136" width="67" height="30"/>
+                                                <state key="normal" title="Customer">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="8NJ-Qu-0rA" kind="show" id="P7f-w3-ATX"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.45882352939999999" green="0.45882352939999999" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="Vt2-lh-Pag" firstAttribute="centerX" secondItem="9eN-cD-mDt" secondAttribute="centerX" id="1oc-Lk-rMJ"/>
+                                            <constraint firstItem="Vt2-lh-Pag" firstAttribute="centerY" secondItem="9eN-cD-mDt" secondAttribute="centerY" id="OPU-jR-bwj"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f4y-ra-uxT" userLabel="BusinessView">
+                                        <rect key="frame" x="0.0" y="301.5" width="375" height="301.5"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1G-JO-znc">
+                                                <rect key="frame" x="156" y="136" width="62" height="30"/>
+                                                <state key="normal" title="Business">
+                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="Pl5-6d-prL" kind="show" id="hlX-HZ-rKM"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.61176470589999998" green="0.53333333329999999" blue="0.49803921569999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="d1G-JO-znc" firstAttribute="centerX" secondItem="f4y-ra-uxT" secondAttribute="centerX" id="1eT-s6-3EW"/>
+                                            <constraint firstItem="d1G-JO-znc" firstAttribute="centerY" secondItem="f4y-ra-uxT" secondAttribute="centerY" id="Kfo-U2-Hia"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="ZVR-Zc-Wks" firstAttribute="centerY" secondItem="SV9-nQ-5oT" secondAttribute="centerY" id="2xL-Nc-hH5"/>
-                            <constraint firstItem="ZVR-Zc-Wks" firstAttribute="centerX" secondItem="SV9-nQ-5oT" secondAttribute="centerX" id="KHq-b7-9xv"/>
+                            <constraint firstItem="2jh-wJ-hhm" firstAttribute="top" secondItem="HeI-UI-Pkc" secondAttribute="top" id="CuC-rh-Tdt"/>
+                            <constraint firstAttribute="bottom" secondItem="2jh-wJ-hhm" secondAttribute="bottom" id="VdF-CZ-pLw"/>
+                            <constraint firstItem="2jh-wJ-hhm" firstAttribute="trailing" secondItem="HeI-UI-Pkc" secondAttribute="trailing" id="hxh-7V-Uof"/>
+                            <constraint firstItem="2jh-wJ-hhm" firstAttribute="leading" secondItem="HeI-UI-Pkc" secondAttribute="leading" id="l4u-Ym-7Db"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="HeI-UI-Pkc"/>
                     </view>
@@ -246,7 +266,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mbN-Ch-XUa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2825" y="0.0"/>
+            <point key="canvasLocation" x="-2826.4000000000001" y="-0.44977511244377816"/>
         </scene>
         <!--Buisness Login-->
         <scene sceneID="fx3-sU-Dl2">
