--- a/To-Go/Base.lproj/Main.storyboard
+++ b/To-Go/Base.lproj/Main.storyboard
@@ -861,6 +861,7 @@
                                     <outlet property="menuItemName" destination="I3X-MA-kHp" id="YKy-Ih-AXv"/>
                                     <outlet property="menuItemPrice" destination="Nef-Mt-mlQ" id="93H-m4-Rvl"/>
                                     <outlet property="menuItemSize" destination="e6m-QZ-vIl" id="9fL-4z-egY"/>
+                                    <segue destination="MXx-bl-oP3" kind="show" id="kWR-lP-abW"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -869,9 +870,6 @@
                             <outlet property="delegate" destination="xOJ-aU-hKB" id="b8O-4P-HlU"/>
                         </connections>
                     </tableView>
-                    <connections>
-                        <segue destination="MXx-bl-oP3" kind="show" identifier="SelectItemToAddExtras" id="Fqp-Fv-RGE"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zt6-1K-tbU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -880,19 +878,45 @@
         <!--Add Extras-->
         <scene sceneID="213-G7-1ss">
             <objects>
-                <tableViewController title="Extras" id="MXx-bl-oP3" userLabel="Add Extras" sceneMemberID="viewController">
+                <tableViewController title="Extras" id="MXx-bl-oP3" userLabel="Add Extras" customClass="AddExtrasTableVC" customModule="To_Go" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Xv3-GE-g1V">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="vOo-BJ-hlc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddExtrasTableViewCell" rowHeight="72" id="vOo-BJ-hlc" customClass="AddExtrasTableViewCell" customModule="To_Go" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="72"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vOo-BJ-hlc" id="o2y-6H-AIb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Extra" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccb-RC-Ixt">
+                                            <rect key="frame" x="52" y="25" width="39.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rof-9Y-WEE">
+                                            <rect key="frame" x="299" y="21" width="39" height="28"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Ccb-RC-Ixt" firstAttribute="leading" secondItem="o2y-6H-AIb" secondAttribute="leadingMargin" constant="36" id="Ha1-Gk-ZAO"/>
+                                        <constraint firstItem="Rof-9Y-WEE" firstAttribute="top" secondItem="o2y-6H-AIb" secondAttribute="topMargin" constant="10" id="Met-Ck-yAu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Ccb-RC-Ixt" secondAttribute="bottom" constant="15" id="Vhg-Za-Q8b"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Rof-9Y-WEE" secondAttribute="trailing" constant="21" id="gFH-e4-Rna"/>
+                                        <constraint firstItem="Ccb-RC-Ixt" firstAttribute="top" secondItem="o2y-6H-AIb" secondAttribute="topMargin" constant="14" id="iMt-g8-8vY"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Rof-9Y-WEE" secondAttribute="bottom" constant="12" id="t5F-ZX-Amj"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="extra" destination="Ccb-RC-Ixt" id="1js-oX-d9m"/>
+                                    <outlet property="price" destination="Rof-9Y-WEE" id="7eH-4w-Bog"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -903,7 +927,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k6Y-am-aee" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4721" y="-656"/>
+            <point key="canvasLocation" x="4657" y="-656"/>
         </scene>
         <!--Order-->
         <scene sceneID="vpm-tA-EWM">
